[project]
name = "invaria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pymupdf>=1.26.6",
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.1.7",
    "pypdf>=6.1.3",
    "setuptools>=80.9.0",
    "textract>=1.6.5",
]
